@@ -1,32 +1,39 @@
-function [v0, vl, vu] = getv(om, name, idx)
+function [v0, vl, vu, vt] = getv(om, name, idx)
 %GETV  Returns initial value, lower bound and upper bound for opt variables.
 %   [V0, VL, VU] = GETV(OM)
 %   [V0, VL, VU] = GETV(OM, NAME)
 %   [V0, VL, VU] = GETV(OM, NAME, IDX)
-%   Returns the lower bound and upper bound for the full optimization
-%   variable vector, or for a specific named or name and indexed
-%   variable set.
+%   [V0, VL, VU, VT] = GETV(...)
+%   Returns the initial value V0, lower bound VL and upper bound VU for
+%   the full optimization variable vector, or for a specific named or named
+%   and indexed variable set. Optionally also returns a corresponding char
+%   vector VT of variable types, where 'C', 'I' and 'B' represent continuous
+%   integer and binary variables, respectively.
 %
 %   Examples:
 %       [x, xmin, xmax] = getv(om);
 %       [Pg, Pmin, Pmax] = getv(om, 'Pg');
-%       [zij0, zijmin, zijmax] = getv(om, 'z', {i, j});
+%       [zij0, zijmin, zijmax, ztype] = getv(om, 'z', {i, j});
 %   
 %   See also OPT_MODEL.
 
 %   MATPOWER
 %   $Id$
 %   by Ray Zimmerman, PSERC Cornell
-%   Copyright (c) 2008-2012 by Power System Engineering Research Center (PSERC)
+%   Copyright (c) 2008-2015 by Power System Engineering Research Center (PSERC)
 %
 %   This file is part of MATPOWER.
 %   Covered by the 3-clause BSD License (see LICENSE file for details).
 %   See http://matpower.org/ for more info.
 
-
+if nargout > 3
+    have_vt = 1;
+else
+    have_vt = 0;
+end
 if nargin < 2
-    v0 = []; vl = []; vu = [];
-    s = struct('type', {'.', '{}'}, 'subs', {'', 1});
+    v0 = []; vl = []; vu = []; vt = char([]);
+    s1 = struct('type', {'.', '{}'}, 'subs', {'', 1});
     for k = 1:om.var.NS
         name = om.var.order(k).name;
         idx = om.var.order(k).idx;
@@ -34,15 +41,38 @@ if nargin < 2
             v0 = [ v0; om.var.data.v0.(name) ];
             vl = [ vl; om.var.data.vl.(name) ];
             vu = [ vu; om.var.data.vu.(name) ];
+            if have_vt
+                N = om.var.idx.N.(name);
+                vt0 = om.var.data.vt.(name);
+                if isscalar(vt0) && N > 1 
+                    vt = [ vt char(vt0 * ones(1, N)) ];
+                else
+                    vt = [ vt vt0 ];
+                end
+            end
         else
             % (calls to substruct() are relatively expensive ...
-            % s = substruct('.', name, '{}', idx);
+            % s1 = substruct('.', name, '{}', idx);
             % ... so replace it with these more efficient lines)
-            s(1).subs = name;
-            s(2).subs = idx;
-            v0 = [ v0; subsref(om.var.data.v0, s) ];
-            vl = [ vl; subsref(om.var.data.vl, s) ];
-            vu = [ vu; subsref(om.var.data.vu, s) ];
+            s1(1).subs = name;
+            s1(2).subs = idx;
+            v0 = [ v0; subsref(om.var.data.v0, s1) ];
+            vl = [ vl; subsref(om.var.data.vl, s1) ];
+            vu = [ vu; subsref(om.var.data.vu, s1) ];
+            if have_vt
+                % (calls to substruct() are relatively expensive ...
+                % s2 = substruct('.', name, '()', idx);
+                % ... so replace it with these more efficient lines)
+                s2 = s1;
+                s2(2).type = '()';
+                N = subsref(om.var.idx.N, s2);
+                vt0 = subsref(om.var.data.vt, s1);
+                if isscalar(vt0) && N > 1 
+                    vt = [ vt char(vt0 * ones(1, N)) ];
+                else
+                    vt = [ vt vt0 ];
+                end
+            end
         end
     end
 else
@@ -51,6 +81,15 @@ else
             v0 = om.var.data.v0.(name);
             vl = om.var.data.vl.(name);
             vu = om.var.data.vu.(name);
+            if have_vt
+                N = om.var.idx.N.(name);
+                vt0 = om.var.data.vt.(name);
+                if isscalar(vt0) && N > 1 
+                    vt = char(vt0 * ones(1, N));
+                else
+                    vt = vt0;
+                end
+            end
         else
             % (calls to substruct() are relatively expensive ...
             % s1 = substruct('.', name, '{}', idx);
@@ -59,10 +98,27 @@ else
             v0 = subsref(om.var.data.v0, s1);
             vl = subsref(om.var.data.vl, s1);
             vu = subsref(om.var.data.vu, s1);
+            if have_vt
+                % (calls to substruct() are relatively expensive ...
+                % s2 = substruct('.', name, '()', idx);
+                % ... so replace it with these more efficient lines)
+                s2 = s1;
+                s2(2).type = '()';
+                N = subsref(om.var.idx.N, s2);
+                vt0 = subsref(om.var.data.vt, s1);
+                if isscalar(vt0) && N > 1 
+                    vt = char(vt0 * ones(1, N));
+                else
+                    vt = vt0;
+                end
+            end
         end
     else
         v0 = [];
         vl = [];
         vu = [];
+        if have_vt
+            vt = [];
+        end
     end
 end
